--- a/package.json
+++ b/package.json
@@ -10,15 +10,28 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^3.1.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@types/canvas-confetti": "^1.6.4",
-    "astro": "^4.10.2",
-    "autoprefixer": "^10.4.19",
-    "canvas-confetti": "^1.9.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
     "@astrojs/check": "^0.7.0",
+    "@astrojs/mdx": "^4.3.12",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/tailwind": "^5.1.0",
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "astro": "^5.16.0",
+    "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.554.0",
+    "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.18",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.4.5"
   }
 }
