--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.554.0",
     "postcss": "^8.4.38",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.4.0",
